--- a/biography.html
+++ b/biography.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -175,7 +175,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for subscribing</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="XTJBHu4KzxNc7KrDnmcnjuROsGMCor4TFeRPd/RTabXnkIyJ/RlpxsdRRl/J+6NXr/WQomI+xDH6dcghO1mt0F3sdUaqrw66TcEZwMW5HAr4PS3vPalK907hGK4tf00n" data-form-email="true">
+                        <input type="hidden" value="b5NrqenjiyNnRJ1/o2etNKM7qO9SzjXva8d1zDzIuz8R6nWdTiHq+VbtHvpYt8xG51+CILV7uHM+v75nvSGMXAm0+jT9ali+N5OpY+0d42wsaR3LWSjlOtf/dyhwsxCc" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-5a-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-black">SUBSCRIBE</button></span>
@@ -208,7 +208,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="DvTYx2JDillpN1z7Lv6dtBv2kxRd6dZYyYMETxGScOhzZkGvDu34vqGHCsbfqarNxOXqXEjbVZsxGH9u85X19kyFJajk3cRyxy9ZpbrSMKH3mySzO0eRHhereC60iHi3" data-form-email="true">
+                    <input type="hidden" value="RQiqqfdjAOlOoMHhdAJbjNF0S9gw8Cl99CdGdvcaWlbhSCpS4Vx4Q7A7/dHEdVRyuRO9EX6V3H3yt3oVoaQUCIFjUh5CFhL/aCS6BatcEx1bBCZUhSbk/tAP2WTqTRmG" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
