--- a/biography.html
+++ b/biography.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -175,7 +175,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for subscribing</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="NQD0DeivlEiPWqjT0tvXYUTO2a5M3foXfmthDdhbKxQGNHs7g4CLYlr0eF/UJiTbkzkkCjF6OgY5Qunrz3Lkw27ycBqyFvVGS44Yf9BOBDqHzey/GcRjKfWv81MEaLpX" data-form-email="true">
+                        <input type="hidden" value="vO5mGquybduJApJ3Eer7x+1N9a3lz45NG29hjiSe/HZPvCt9VS0nG+9t7c2MM4oWtZ6enoxcsIMEnms+r2Z3RwnR7f1pNwC3Uio/GTc6ATb9jvnTEe6m2PCkNzZ/cJub" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-5a-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-black">SUBSCRIBE</button></span>
@@ -208,7 +208,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="K+ox8TsV6F8W5JS+LDlfa3Js5WlHbUqeyZoQDOKsJW2uojrxz48cIFqVyIHYrFxU5CFMYk1dB3cZ55QFNxpsPslhekm+QgD1i4xFRSVSNDXP2lLeEcNQBNr1gdPCsA7k" data-form-email="true">
+                    <input type="hidden" value="HnWSYKMqG6sWh9xb3+mmJLcrEYJY00GT9Y4JKRNKx4zUraxLK1OQL1/FfDt34trczpa1UWB1AX0IVlnabPiYdyVclxaIPaOJzKy+bBrRMpwCScXANb7tCvCKmXoBQK2o" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
